tests/errors/types/generic-parent-not-namespace.fn
---
Description: Generic type with multi-segment path where parent is not a namespace
Expected: FN3203
---

type Foo
{
    x: i32
    init{}
}

type Program
{
    static fn Main -> i32
    {
        var a: Foo.Bar<i32> = 5
        return 0
    }
}
